Add example render

--- a/gtk-print.cabal
+++ b/gtk-print.cabal
@@ -5,13 +5,13 @@ cabal-version: 2.2
 -- see: https://github.com/sol/hpack
 
 name:           gtk-print
-version:        0.1.0.0
+version:        0.1.1.0
 description:    Please see the README on GitHub at <https://github.com/mpilgrem/gtk-print#readme>
 homepage:       https://github.com/mpilgrem/gtk-print#readme
 bug-reports:    https://github.com/mpilgrem/gtk-print/issues
 author:         Mike Pilgrem
 maintainer:     public@pilgrem.com
-copyright:      2024 Mike Pilgrem
+copyright:      2025 Mike Pilgrem
 license:        BSD-3-Clause
 license-file:   LICENSE
 build-type:     Simple
@@ -30,6 +30,12 @@ executable gtk-print
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , gi-cairo
+    , gi-cairo-connector
+    , gi-cairo-render
     , gi-gtk >=4.0
+    , gi-pango
+    , gi-pangocairo
     , haskell-gi-base
+    , text
   default-language: Haskell2010
